# mosaic

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  output.txt  run.sh
appimage/: Mosaic.AppImage
data/: DSC06834_out.pgm  database.txt
include/mosaic/: common.h  mosaic.h  mosaicexceptions.h
mosaic/: CMakeLists.txt  common.cu  mosaic.cu
src/: appexception.cpp  appexception.h  appmosaic.h  main.cpp
